# timothy

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: unit_test.yml  unit_test_with_coverage.yml
tests/: stubs.py  test_pipeline_impl.py  test_pipelineio_impl.py  test_pipelinestagerunner_impl.py  test_pipelinestorage_impl.py
tests/core/: test_pipeline.py  test_pipelinecomponentset.py  test_pipelineio.py  test_pipelineobject.py  test_pipelinestage.py  test_typedefs.py
timothy/: __init__.py  _pipeline_impl.py  _pipelineio_impl.py  _pipelineobject_impl.py  _pipelinestagerunner_impl.py  _pipelinestorage_impl.py  exceptions.py
timothy/_utils/: common.py
timothy/core/: __init__.py  _exceptions.py  _pipeline.py  _pipelinecomponentset.py  _pipelinecore.py  _pipelineio.py  _pipelineobject.py  _pipelinestage.py  _pipelinestagerunner.py  _pipelinestorage.py  _typedefs.py
timothy/examples/: basic_aggregations.py  basic_math.py
