[tool.poetry]
name = "timothy"
version = "0.1.0"
description = "Define processing pipelines via functions"
authors = ["Adam Callison <callison.adam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "0.5.7"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["./timothy"]
omit = ["./timothy/examples/**/*"]
